Academic Year Add

--- a/src/Resources/translations/SchoolAdmin+intl-icu.en_GB.yaml
+++ b/src/Resources/translations/SchoolAdmin+intl-icu.en_GB.yaml
@@ -23,4 +23,5 @@ Must be unique. Helps to control chronological ordering.: Must be unique. Helps 
 First Day: First Day
 Last Day: Last Day
 Edit Academic Year: Edit Academic Year
+Add Academic Year: Add Academic Year
 Manage Academic Years: Manage Academic Years
