Special Day Pagination Pagination Default Filtering

--- a/src/Resources/translations/SchoolAdmin+intl-icu.en_GB.yaml
+++ b/src/Resources/translations/SchoolAdmin+intl-icu.en_GB.yaml
@@ -33,3 +33,24 @@ Abbreviation: Abbreviation
 'The dates overlap {name}: {first} - {last}': 'The dates overlap {name}: {first} - {last}'
 Add Term: Add Term
 Manage Terms: Manage Terms
+Monday: Monday
+Mon: Mon
+School Day: School Day
+School Opens: School Opens
+School Starts: School Starts
+School Ends: School Ends
+School Closes: School Closes
+Submit: Submit
+Tuesday: Tuesday
+Tue: Tue
+Wednesday: Wednesday
+Wed: Wed
+Thursday: Thursday
+Thu: Thu
+Friday: Friday
+Fri: Fri
+Saturday: Saturday
+Sat: Sat
+Sunday: Sunday
+Sun: Sun
+Manage Days of the Week: Manage Days of the Week
