--- a/src/Resources/translations/SchoolAdmin+intl-icu.en_GB.yaml
+++ b/src/Resources/translations/SchoolAdmin+intl-icu.en_GB.yaml
@@ -62,3 +62,9 @@ academicyearspecialday:
 Date: Date
 Type: Type
 Manage Special Days: Manage Special Days
+Edit Special Day: Edit Special Day
+Please select...: Please select...
+Description: Description
+Add Special Day: Add Special Day
+his value is locked. Change it in the manage screen.: This value is locked. Change it in the manage screen.
+Must be unique in the Academic Year.: Must be unique in the Academic Year.
