Calendar Display/Print

--- a/src/Resources/translations/SchoolAdmin+intl-icu.en_GB.yaml
+++ b/src/Resources/translations/SchoolAdmin+intl-icu.en_GB.yaml
@@ -70,3 +70,6 @@ his value is locked. Change it in the manage screen.: This value is locked. Chan
 Must be unique in the Academic Year.: Must be unique in the Academic Year.
 'This value is locked.': 'This value is locked.'
 Duplicate: Duplicate
+Term Break: Term Break
+Calendar: Calendar
+Use CTRL-P on Windows or CMD-SHIFT-P on MAC to print this calendar: Use CTRL-P on Windows or CMD-SHIFT-P on MAC to print this calendar
