House Management completed

--- a/src/Resources/translations/SchoolAdmin+intl-icu.en_GB.yaml
+++ b/src/Resources/translations/SchoolAdmin+intl-icu.en_GB.yaml
@@ -73,3 +73,8 @@ Duplicate: Duplicate
 Term Break: Term Break
 Calendar: Calendar
 Use CTRL-P on Windows or CMD-SHIFT-P on MAC to print this calendar: Use CTRL-P on Windows or CMD-SHIFT-P on MAC to print this calendar
+Logo: Logo
+Manage Houses: Manage Houses
+Image file size maximum 2MB: Image file size maximum 2MB
+Edit House: Edit House
+Add House: Add House
