--- a/src/Resources/translations/SchoolAdmin+intl-icu.en_GB.yaml
+++ b/src/Resources/translations/SchoolAdmin+intl-icu.en_GB.yaml
@@ -41,6 +41,7 @@ School Starts: School Starts
 School Ends: School Ends
 School Closes: School Closes
 Submit: Submit
+Display: Display
 Tuesday: Tuesday
 Tue: Tue
 Wednesday: Wednesday
