External Tracking Management

--- a/src/Resources/translations/SchoolAdmin+intl-icu.en_GB.yaml
+++ b/src/Resources/translations/SchoolAdmin+intl-icu.en_GB.yaml
@@ -138,3 +138,4 @@ Year groups to which this field is relevant.: Year groups to which this field is
 Edit Field: Edit Field
 'Manage External Assessments for {name}': 'Manage External Assessments for {name}'
 Edit External Assessments: Edit External Assessments
+Tracking Settings: Tracking Settings
