--- a/src/Resources/translations/SchoolAdmin+intl-icu.en_GB.yaml
+++ b/src/Resources/translations/SchoolAdmin+intl-icu.en_GB.yaml
@@ -140,3 +140,10 @@ Edit Field: Edit Field
 Edit External Assessments: Edit External Assessments
 Tracking Settings: Tracking Settings
 primary_external_assessment_help: These settings allow a particular type of external assessment to be associated with each year group. The selected assessment will be used as the primary assessment to be used as a baseline for comparison (for example, within the Markbook). You are required to select a particular field category can be chosen from which to draw data (if no category is chosen, the data will not be saved).
+'scale_manage_note': 'Scales are used through the Assess modules to control what grades can be entered into the system. Editing some of the inbuilt scales can impact other areas of the system: it is advised to take a backup of the entire system before changing Scale details.'
+Usage: Usage
+Active: Active
+Numeric: Numeric
+'Active: Yes': 'Active: Yes'
+'Active: No': 'Active: No'
+Manage Scales: Manage Scales
