Alert Level Managemnt completed
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Resources/translations/SchoolAdmin+intl-icu.en_GB.yaml
+++ b/src/Resources/translations/SchoolAdmin+intl-icu.en_GB.yaml
@@ -350,3 +350,10 @@ Policy Link: Policy Link
 A link to the school behaviour policy.: A link to the school behaviour policy.
 Letters: Letters
 Behaviour Settings: Behaviour Settings
+Low: Low
+Font/Border Colour: Font/Border Colour
+RGB Hex Value: RGB Hex Value
+Background Colour: Background Colour
+Medium: Medium
+High: High
+Alert Levels: Alert Levels
