Pagination Rename Main Menu rewrite
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Resources/translations/SchoolAdmin+intl-icu.en_GB.yaml
+++ b/src/Resources/translations/SchoolAdmin+intl-icu.en_GB.yaml
@@ -430,3 +430,23 @@ attendancecode:
         onsite - late: On Site - Late (Tardy)
         offsite: Off Site
         offsite - left: Off Site - Left
+Assess: Assess
+External Assessments: External Assessments
+Formal Assessment Settings: Formal Assessment Settings
+Scales: Scales
+Groupings: Groupings
+Houses: Houses
+Learn: Learn
+Planner Settings: Planner Settings
+Resource Settings: Resource Settings
+Other: Other
+Facility Settings: Facility Settings
+File Extensions: File Extensions
+People: People
+Individual Needs: Individual Needs
+Years, Days & Times: Years, Days & Times
+Academic Years: Academic Years
+Days of the Week: Days of the Week
+Special Days: Special Days
+Terms: Terms
+Module Menu: Module Menu
