--- a/src/Resources/translations/SchoolAdmin+intl-icu.en_GB.yaml
+++ b/src/Resources/translations/SchoolAdmin+intl-icu.en_GB.yaml
@@ -450,3 +450,15 @@ Days of the Week: Days of the Week
 Special Days: Special Days
 Terms: Terms
 Module Menu: Module Menu
+July: July
+August: August
+September: September
+October: October
+November: November
+December: December
+January: January
+February: February
+March: March
+April: April
+May: May
+June: June
