--- a/src/Resources/translations/SchoolAdmin+intl-icu.en_GB.yaml
+++ b/src/Resources/translations/SchoolAdmin+intl-icu.en_GB.yaml
@@ -40,6 +40,7 @@ Add Term: Add Term
 Manage Terms: Manage Terms
 Monday: Monday
 Mon: Mon
+Installed: 	Installed
 School Day: School Day
 School Opens: School Opens
 School Starts: School Starts
@@ -462,3 +463,4 @@ March: March
 April: April
 May: May
 June: June
+Manage Academic Year Terms: Manage Academic Year Terms
